2009-03-13  Jeremie Dimino <jeremie@dimino.org>

	* src/syntax/pa_strings/pa_format.ml,
	* src/core/extlib/extPervasives.ml*,
	* src/core/extlib/print.ml*: rename [pdir_X] to [printer_X]

	* src/core/extlib/print.ml*: added [rprintf] and [krprintf]

	* src/core/extlib/extPervasives.ml*: better directives

2009-03-13  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/IO.mli: [inherit_in], [inherit_out] now produce [unit output]

	* src/core/extlib/innerIO.mli: [inherit_in], [inherit_out] now produce [unit output]

	* src/core/extlib/innerIO.ml: [inherit_in], [inherit_out] now don't close their parent by default

2009-03-12  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* build/preprocess_mli/generate_mli.ml: created

	* build/optcomp/optcomp.ml: [print_token] now accepts optional argument [oc]

	* build/generate_mli.ml: hijacked into only doing the sub-module extraction part

2009-03-12  Jeremie Dimino <jeremie@dimino.org>

	* build/generate_mli.ml: added
	
2009-03-12  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/pMap.ml: [enum] changed enumeration order

	* testsuite/test_pmap.ml: created

	* src/core/extlib/refList.ml*: [backwards], [of_backwards] added

2009-03-11  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml*: [onclose_out] added

	* src/core/extlib/extFormat.ml: [newline_of], [spaces_of] added

	* src/core/extlib/extFormat.ml: [std_formatter], [err_formatter] now flushed at exit

	* src/core/extlib/extFormat.ml: [pp_set_formatter_output] now uses [pp_set_all_formatter_output_functions]

	* src/core/extlib_threads/IOThreads.ml: now using [RMutex] rather than [Mutex]

	* src/core/extlib_threads/extMutex.ml: [DebugMutex] created

	* build/odoc_extract_mli.ml: recreated

	* src/batteries_toolchain/batteries_help.ml: applied patch by kaustuv

	* src/core/extlib/extBigarray.ml*: applied patch by hcarty
